--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,12 @@ border:1px dashed red;
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #141922;
-    color: white;
+    color: grey;
+    font-weight: bold;
+
 }
+
+
 
 img{max-width: 100%;}
 a{
@@ -26,7 +30,6 @@ ul {
     list-style: none;
 }
 
-li{display: inline;}
 
 .wrapper {
     width: 100vw;
@@ -43,9 +46,60 @@ display: flex;
     width: var(--sidebar-width);
     display:flex;
     flex-direction: column;
-justify-content: space-between;}
+justify-content: space-between;
+overflow: hidden;
+color: ;}
+
+#sidebar li:hover {
+    color:white;
+}
 
 
+.icons-top img {
+    width: 40px;
+}
+
+.playlist.section{
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
+
+.playlist.section ul{
+    overflow:auto;
+}
+
+
+.playlist-title
+{
+    color: white;
+text-transform: uppercase;
+}
+
+.add-playlist
+{
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+.icons-bottom img {
+    width: 40px;
+}
+
+.download-button {
+    border-bottom: 2px solid grey;
+}
 #main-content {
     height: calc(100vh - var(--player-height));
     width: calc(100vw - var(--sidebar-width));
@@ -63,23 +117,100 @@ justify-content: space-between;}
     text-transform: uppercase;
 }
 
-
+.playlist.section {
+    overflow:scroll;
+}
 
 #player {
+    display: flex;
+
+    justify-content: space-between;
     height: var(--player-height);
     background-color: #282828;
 }
 
-@media screen and (max-width: 600p) {
-    #sidebar li {
-        font-size: 0rem;
-    }
-    
+.player-left {
+    padding-left: 10px;
+    display: flex;
+align-items: center;
+max-width: 130px;
+
 }
 
-@media screen  and (min-width: 600px){
-    :root {
+.brano {
+}
 
+.artista {
+    color: white;
+    font-size: .9rem;
+}
+
+.titolo{
+    font-size: 0.8rem;
+}
+
+img[alt="Playing Song"]
+
+{  height: 40px;
+align-content: center;}
+
+
+.player-center { color: white;
+    padding-left: 10px;
+    display: flex;
+    flex-direction: column; 
+min-width: 190px;
+}
+
+.player-controls { 
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+}
+
+.circledplay {
+    border: 3px solid white;
+    border-radius: 50%;
+}
+.time-bar {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+}
+
+.player-right {
+    padding-left: 10px;
+    display: flex;
+align-items: center;
+
+}
+.display-none {
+    display: none;
+} 
+
+
+@media screen  and (min-width: 640px){
+    :root {
         --sidebar-width: 300px;
+    }
+    .s-display-inline-block{
+        display:inline-block;
+    }
+
+    .s-display-none{
+        display:none;
+    }
+
+    .icons-top img {
+        width: 40px;
+    }
+
+
+    .icons-bottom img {
+        width: 40px;
+    }
+
+    img[alt="big-logo"] {
+        width:140px;
     }
 }
