--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -273,11 +273,12 @@ align-items: center;
     background-color: lightgrey;
 }
 
-.actualtime-bar
 .player-right { color: white;
     padding-right: 10px;
     gap:.5rem;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
 align-items: center;
 
 }
